JdkHttpTransport: revert to HttpClient; hostname verification disabled via JVM flag
Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>