@@ -1,66 +1,63 @@
 /*
- * HttpURLConnection implementation of HttpTransport (no third-party HTTP dependency).
+ * JDK java.net.http implementation of HttpTransport (no third-party HTTP dependency).
  */
 package com.pingidentity.ps.oidf.rar;
 
-import javax.net.ssl.HostnameVerifier;
-import javax.net.ssl.HttpsURLConnection;
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.TrustManager;
 import javax.net.ssl.X509TrustManager;
 import java.io.IOException;
-import java.io.InputStream;
-import java.io.OutputStream;
-import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 import java.nio.charset.StandardCharsets;
 import java.security.cert.X509Certificate;
+import java.time.Duration;
 import java.util.Map;
 
 /**
- * Posts to the governance engine using {@code java.net.HttpURLConnection}. When {@code insecureTls} is set it
- * trusts any server certificate AND skips hostname verification — a scoped dev flag for self-signed test
- * instances whose cert SAN does not match the internal hostname (e.g. Railway's *.railway.internal). The JDK's
- * newer {@code java.net.http.HttpClient} cannot disable hostname verification per-client (only via a global JVM
- * property), so HttpURLConnection is used here for its per-connection {@link HostnameVerifier}.
+ * Posts to the governance engine using the JDK HTTP client. When {@code insecureTls} is set it trusts any
+ * server certificate — a scoped dev flag for self-signed test instances, replacing the reference plugin's
+ * always-on trust-all manager.
+ *
+ * <p>NOTE: the JDK {@code HttpClient} still performs TLS hostname verification (endpoint identification)
+ * during the handshake even with a trust-all {@link SSLContext}, and it cannot be disabled per-client. For
+ * a self-signed endpoint whose cert SAN does not match the connect hostname (e.g. *.railway.internal), the
+ * JVM must be started with {@code -Djdk.internal.httpclient.disableHostnameVerification=true}. This is set
+ * via JAVA_OPTS on the PingFederate container; without it the handshake fails with
+ * {@code SSLHandshakeException: No subject alternative DNS name matching …}.
  */
 public final class JdkHttpTransport implements HttpTransport {
 
-    private final boolean insecureTls;
-    private final int timeoutMillis;
-    private final SSLContext insecureContext;
+    private final HttpClient client;
+    private final Duration timeout;
 
     public JdkHttpTransport(boolean insecureTls, int timeoutMillis) {
-        this.insecureTls = insecureTls;
-        this.timeoutMillis = timeoutMillis > 0 ? timeoutMillis : 10_000;
-        this.insecureContext = insecureTls ? trustAllContext() : null;
+        this.timeout = Duration.ofMillis(timeoutMillis > 0 ? timeoutMillis : 10_000);
+        HttpClient.Builder builder = HttpClient.newBuilder().connectTimeout(timeout);
+        if (insecureTls) {
+            builder.sslContext(trustAllContext());
+        }
+        this.client = builder.build();
     }
 
     @Override
     public Response post(String url, String body, Map<String, String> headers) throws IOException {
-        HttpURLConnection conn = (HttpURLConnection) new URL(url).openConnection();
-        if (insecureTls && conn instanceof HttpsURLConnection) {
-            HttpsURLConnection https = (HttpsURLConnection) conn;
-            https.setSSLSocketFactory(insecureContext.getSocketFactory());
-            https.setHostnameVerifier(ALLOW_ALL_HOSTNAMES);
-        }
-        conn.setRequestMethod("POST");
-        conn.setConnectTimeout(timeoutMillis);
-        conn.setReadTimeout(timeoutMillis);
-        conn.setDoOutput(true);
+        HttpRequest.Builder rb = HttpRequest.newBuilder(URI.create(url))
+                .timeout(timeout)
+                .POST(HttpRequest.BodyPublishers.ofString(body, StandardCharsets.UTF_8));
         if (headers != null) {
-            headers.forEach(conn::setRequestProperty);
+            headers.forEach(rb::header);
         }
-        try (OutputStream os = conn.getOutputStream()) {
-            os.write(body.getBytes(StandardCharsets.UTF_8));
+        try {
+            HttpResponse<String> response = client.send(rb.build(), HttpResponse.BodyHandlers.ofString(StandardCharsets.UTF_8));
+            return new Response(response.statusCode(), response.body());
+        } catch (InterruptedException e) {
+            Thread.currentThread().interrupt();
+            throw new IOException("governance engine request interrupted", e);
         }
-        int status = conn.getResponseCode();
-        InputStream is = (status >= 200 && status < 300) ? conn.getInputStream() : conn.getErrorStream();
-        String responseBody = is == null ? "" : new String(is.readAllBytes(), StandardCharsets.UTF_8);
-        return new Response(status, responseBody);
     }
-
-    private static final HostnameVerifier ALLOW_ALL_HOSTNAMES = (hostname, session) -> true;
 
     private static SSLContext trustAllContext() {
         try {
